feat: add endpoint to get credits and credit cards debts
