# src/main/java/com/project1/ms_credit_service/business/service/CreditDebtsValidationServiceImpl.java
@@ -1,16 +1,24 @@
 package com.project1.ms_credit_service.business.service;
 
+import com.project1.ms_credit_service.business.adapter.CustomerService;
+import com.project1.ms_credit_service.business.mapper.CreditDebtsValidationMapper;
 import com.project1.ms_credit_service.exception.BadRequestException;
+import com.project1.ms_credit_service.model.CreditDebtsResponse;
 import com.project1.ms_credit_service.model.CustomerResponse;
+import com.project1.ms_credit_service.model.entity.Credit;
+import com.project1.ms_credit_service.model.entity.CreditCard;
+import com.project1.ms_credit_service.model.entity.CustomerStatus;
 import com.project1.ms_credit_service.repository.CreditCardRepository;
 import com.project1.ms_credit_service.repository.CreditRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.math.BigDecimal;
 import java.time.Clock;
 import java.time.LocalDateTime;
+import java.util.List;
 
 @Service
 public class CreditDebtsValidationServiceImpl implements CreditDebtsValidationService {
@@ -20,6 +28,12 @@ public class CreditDebtsValidationServiceImpl implements CreditDebtsValidationSe
 
     @Autowired
     private CreditCardRepository creditCardRepository;
+
+    @Autowired
+    private CreditDebtsValidationMapper creditDebtsValidationMapper;
+
+    @Autowired
+    private CustomerService customerService;
 
     @Autowired
     private Clock clock;
@@ -32,13 +46,20 @@ public class CreditDebtsValidationServiceImpl implements CreditDebtsValidationSe
         ).map(tuple -> customer);
     }
 
+    @Override
+    public Mono<CreditDebtsResponse> getCreditDebtsByCustomerId(String customerId) {
+        return validateCustomerAvailability(customerId)
+            .flatMap(customerResponse -> Mono.zip(
+                getOverdueCredits(customerId).collectList(),
+                getOverdueCreditCards(customerId).collectList()
+            ).map(tuple -> creditDebtsValidationMapper.getCreditDebtsResponse(
+                tuple.getT1(),
+                tuple.getT2()
+            )));
+    }
+
     private Mono<CustomerResponse> validateCustomerCreditDebts(CustomerResponse customer) {
-        return creditRepository.findByCustomerId(customer.getId())
-            .filter(credit -> {
-                boolean hasPassedPaymentDay = LocalDateTime.now(clock).isAfter(credit.getNextPaymentDueDate());
-                boolean isCurrentDebtPaid = credit.getAmountPaid().compareTo(credit.getExpectedPaymentToDate()) >= 0;
-                return hasPassedPaymentDay && !isCurrentDebtPaid;
-            })
+        return getOverdueCredits(customer.getId())
             .hasElements()
             .flatMap(hasDebts -> {
                 if (hasDebts) {
@@ -50,12 +71,7 @@ public class CreditDebtsValidationServiceImpl implements CreditDebtsValidationSe
     }
 
     private Mono<CustomerResponse> validateCustomerCreditCardDebts(CustomerResponse customer) {
-        return creditCardRepository.findByCustomerId(customer.getId())
-            .filter(card -> {
-                boolean hasAmountToPay = card.getUsedAmount().compareTo(BigDecimal.ZERO) > 0;
-                boolean hasPassedPayDay = LocalDateTime.now(clock).getDayOfMonth() > card.getMonthlyPaymentDay();
-                return hasAmountToPay && hasPassedPayDay;
-            })
+        return getOverdueCreditCards(customer.getId())
             .hasElements()
             .flatMap(hasDebts -> {
                 if (hasDebts) {
@@ -64,5 +80,33 @@ public class CreditDebtsValidationServiceImpl implements CreditDebtsValidationSe
                     return Mono.just(customer);
                 }
             });
+    }
+
+    private Mono<CustomerResponse> validateCustomerAvailability(String customerId) {
+        return customerService.getCustomerById(customerId)
+            .filter(customerResponse -> CustomerStatus.ACTIVE.toString().equals(customerResponse.getStatus()))
+            .switchIfEmpty(Mono.error(new BadRequestException("Customer has INACTIVE status")));
+    }
+
+    private Flux<Credit> getOverdueCredits(String customerId) {
+        return creditRepository.findByCustomerId(customerId)
+            .filter(this::isOverdueCredit);
+    }
+
+    private Flux<CreditCard> getOverdueCreditCards(String customerId) {
+        return creditCardRepository.findByCustomerId(customerId)
+            .filter(this::isOverdueCreditCard);
+    }
+
+    private boolean isOverdueCredit(Credit credit) {
+        boolean hasPassedPaymentDay = LocalDateTime.now(clock).isAfter(credit.getNextPaymentDueDate());
+        boolean isCurrentDebtPaid = credit.getAmountPaid().compareTo(credit.getExpectedPaymentToDate()) >= 0;
+        return hasPassedPaymentDay && !isCurrentDebtPaid;
+    }
+
+    private boolean isOverdueCreditCard(CreditCard card) {
+        boolean hasAmountToPay = card.getUsedAmount().compareTo(BigDecimal.ZERO) > 0;
+        boolean hasPassedPayDay = LocalDateTime.now(clock).getDayOfMonth() > card.getMonthlyPaymentDay();
+        return hasAmountToPay && hasPassedPayDay;
     }
 }
